--- a/AkkaNetDemo/AkkaNetDemo.csproj
+++ b/AkkaNetDemo/AkkaNetDemo.csproj
@@ -47,15 +47,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BrokerManager.cs" />
     <Compile Include="Exceptions\TradeLimitException.cs" />
-    <Compile Include="Messages\TradeHistoryItem.cs" />
+    <Compile Include="TradingSystem.cs" />
     <Compile Include="Trader.cs" />
-    <Compile Include="Messages\Messages,cs.cs" />
+    <Compile Include="Messages\Messages.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StockBroker.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="AkkNetDemo.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
