--- a/AkkaNetDemo/AkkaNetDemo.csproj
+++ b/AkkaNetDemo/AkkaNetDemo.csproj
@@ -49,7 +49,7 @@
   <ItemGroup>
     <Compile Include="Exceptions\TradeLimitException.cs" />
     <Compile Include="TradingSystem.cs" />
-    <Compile Include="Trader.cs" />
+    <Compile Include="FloorTrader.cs" />
     <Compile Include="Messages\Messages.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StockBroker.cs" />
